--- a/37-lazyfox/css/style.css
+++ b/37-lazyfox/css/style.css
@@ -716,4 +716,108 @@ ul.social-list li a:hover, ul.social-list li a:focus{
   .side{
 	margin-left: 245px;
   }
+#overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 9999;
+  }
+
+  #cropTool {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+	text-align: center;
+  }
+
+  #imageToCrop,
+  #croppedImage {
+	max-width: 100%;
+	max-height: 300px;
+	margin-bottom: 10px;
+  }
+
+  #cropPreview {
+	max-width: 100%;
+	max-height: 200px;
+	margin-bottom: 10px;
+  }
+
+  #cropButton,
+  #cancelButton {
+	display: inline-block;
+	margin: 10px;
+	padding: 5px 10px;
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+  }
+
+  #cropButton:hover,
+  #cancelButton:hover {
+	background-color: #0056b3;
+  }
+  #overlay1 {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 9999;
+  }
+
+  #cropTool1{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+	text-align: center;
+  }
+
+  #imageToCrop1,
+  #croppedImage1 {
+	max-width: 100%;
+	max-height: 300px;
+	margin-bottom: 10px;
+  }
+
+  #cropPreview1 {
+	max-width: 100%;
+	max-height: 200px;
+	margin-bottom: 10px;
+  }
+
+  #cropButton1,
+  #cancelButton1 {
+	display: inline-block;
+	margin: 10px;
+	padding: 5px 10px;
+	background-color: #007bff;
+	color: #fff;
+	border: none;
+	border-radius: 3px;
+	cursor: pointer;
+  }
+
+  #cropButton1:hover,
+  #cancelButton1:hover {
+	background-color: #0056b3;
+  }
   
